Update project descriptions

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                   <a href="#" data-toggle="modal" data-target="#bvbModal">
                     <h3>Barclays Video Banking</h3>
                     <hr>
-                    <p>Angular</p>
+                    <p>HTML, CSS and Native JavaScript</p>
                   </a>
                 </figcaption>
               </figure>
@@ -665,7 +665,9 @@
           <h4 class="modal-title" id="airBpModalLabel"><a href="https://www.bp.com/en/global/bp-air.html">Air BP</a></h4>
         </div>
         <div class="modal-body">
-          <p>Air BP</p>
+          <p>1. Implemented internal proof of concepts for Air BP in order to expand Air BP beyond the world of fuelling in React, Node JS and Mongo DB</p>
+          <p>2. Also built scaled web application on Azure cloud to facilitate fuel releases using Angular JS, Node and Mongo that has been released globally across 200 airports.</p>
+          <p>3. Developed a tool in Angular 2 for managing fuel tendering and offers to multiple airlines.</p>
           <img src="images/portfolio/air-bp.png" class="img-responsive" alt="">
         </div>
       </div>
@@ -699,7 +701,7 @@
           <h4 class="modal-title" id="bpModalLabel"><a href="https://www.bp.com/">BP</a></h4>
         </div>
         <div class="modal-body">
-          <p>BP</p>
+          <p>Developed the Digital@BP hub internally to showcase all BP projects to the client. This was built using React, Node JS, Mongo DB and Watson CMS and used Auth0 for authentication.</p>
           <img src="images/portfolio/bp.png" class="img-responsive" alt="">
         </div>
       </div>
@@ -716,7 +718,9 @@
           <h4 class="modal-title" id="castrolModalLabel"><a href="https://www.castrol.com/">Castrol</a></h4>
         </div>
         <div class="modal-body">
-          <p>Castrol</p>
+          <p>Integrated Technical live chat (HTML and CSS) using a third party chat tool on Castrol's website to trial with customers for six weeks e.g. for oil queries.</p>
+          <p>This is now released globally due to the success of the initial trial period.</p>
+          <p>2. Implemented BP SAML single sign on for Castrol's Showpad sales website across mobile and web.</p>
           <img src="images/portfolio/castrol.png" class="img-responsive" alt="">
         </div>
       </div>
@@ -733,7 +737,7 @@
           <h4 class="modal-title" id="govUkModalLabel"><a href="https://www.gov.uk/">GOV UK</a></h4>
         </div>
         <div class="modal-body">
-          <p>GOV UK</p>
+          <p>Worked on a confidential project within GOV UK using React, Redux, Nginx and Node JS.</p>
           <img src="images/portfolio/gov-uk.png" class="img-responsive" alt="">
         </div>
       </div>
@@ -750,7 +754,8 @@
           <h4 class="modal-title" id="govUkReactModalLabel"><a href="https://ukhomeoffice.github.io/govuk-react">GOV UK React</a></h4>
         </div>
         <div class="modal-body">
-          <p>GOV UK React</p>
+          <p>Developed a port of the GOV UK design system in React as a component library.</p>
+          <p>Used React 16 context API, higher order components and React 16 async data fetching principles. </p>
           <img src="images/portfolio/govuk-react.png" class="img-responsive" alt="">
         </div>
       </div>
@@ -767,7 +772,7 @@
           <h4 class="modal-title" id="govUkFredericModalLabel"><a href="https://stevesims.github.io/govuk-frederic">GOV UK Frederic</a></h4>
         </div>
         <div class="modal-body">
-          <p>GOV UK Frederic</p>
+          <p>Developed a Home office project specific component library in React.</p>
           <img src="images/portfolio/govuk-frederic.png" class="img-responsive" alt="">
         </div>
       </div>
@@ -784,7 +789,10 @@
           <h4 class="modal-title" id="nexcelModalLabel"><a href="https://www.nexcel.co.uk/">Nexcel</a></h4>
         </div>
         <div class="modal-body">
-          <p>Nexcel</p>
+          <p>Nexcel is Castrol's showcase automated oil changing product.</p>
+          <p>Nexcel’s sealed oil cell technology enables 90-second oil changes, greater service convenience, reduced emissions and increased re-refining.</p>
+          <p>This web application is a custom built responsive web application using React, Node and Contentful headless CMS.</p>     
+          <p>It was deployed to AWS Elastic Beanstalk as a Docker container and CI/CD was fully automated using BitBucket pipelines.</p>     
           <img src="images/portfolio/nexcel.png" class="img-responsive" alt="">
         </div>
       </div>
@@ -801,7 +809,9 @@
           <h4 class="modal-title" id="oilSelectorModalLabel"><a href="https://applications.castrol.com/oilselector">Castrol Oil Selector</a></h4>
         </div>
         <div class="modal-body">
-          <p>Castrol Oil Selector</p>
+          <p>Castrol's Oil Selector is global across 35 countries and 3 continents with native translations and internationalization.</p>
+          <p>Oil selector is a tool to recommend oil's for your car based on the model of your car or license plate.</p>
+          <p>The tool was built using Angular JS, MySQL and a Java SOAP API backend.</p>
           <img src="images/portfolio/oil_selector.png" class="img-responsive" alt="">
         </div>
       </div>
@@ -815,7 +825,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="reactAsyncModalLabel"><a href="https://github.com/taranchauhan/react-best-practices">React 16 Async loading example</a></h4>
+          <h4 class="modal-title" id="reactAsyncModalLabel"><a href="https://github.com/taranchauhan/react-best-practices">React 16 Async loading using fetcher example</a></h4>
         </div>
         <div class="modal-body">
           <p>React 16 Async loading using fetcher example</p>
@@ -835,7 +845,8 @@
           <h4 class="modal-title" id="bvbModalLabel"><a href="https://videocall.barclays.co.uk/barclays-video-banking/index.html?entrypoint=mortgagesales">Barclays Video Banking</a></h4>
         </div>
         <div class="modal-body">
-          <p>Barclays Video Banking</p>
+          <p>Barclays Video banking was built using native JavaScript across all popular browsers so customers can bank from the comfort of their home.</p>
+          <!-- <p>Barclays Video Banking was built using Angular and utilises WebRTC technologies across all popular browsers so customers can bank from the comfort of their home.</p> -->
           <img src="images/portfolio/videocall-barclays.png" class="img-responsive" alt="">
         </div>
       </div>
