Update BVB project description

--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
           <h4 class="modal-title" id="bvbModalLabel"><a href="https://videocall.barclays.co.uk/barclays-video-banking/index.html?entrypoint=mortgagesales">Barclays Video Banking</a></h4>
         </div>
         <div class="modal-body">
-          <p>Barclays Video banking was built using native JavaScript across all popular browsers so customers can bank from the comfort of their home.</p>
+          <p>Barclays Video banking was built using native JavaScript and supports all modern browsers so customers can bank from the comfort of their home.</p>
           <!-- <p>Barclays Video Banking was built using Angular and utilises WebRTC technologies across all popular browsers so customers can bank from the comfort of their home.</p> -->
           <img src="images/portfolio/videocall-barclays.png" class="img-responsive" alt="">
         </div>
