Update Angular Tour of heroes ngrx project description

--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
           <h4 class="modal-title" id="angularTohModalLabel"><a href="https://github.com/taranchauhan/angular-tour-of-heroes-ngrx">Angular Tour of heroes ngrx</a></h4>
         </div>
         <div class="modal-body">
-          <p>Angular Tour of heroes ngrx</p>
+          <p>This GitHub example expands the Angular Tour of heroes demo application with ngrx application state management.</p>
           <img src="images/portfolio/angular-toh-ngrx.jpg" class="img-responsive" alt="">
         </div>
       </div>
