Update GOV UK Design component library description

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <img src="images/portfolio/govuk-react.png" alt="">
                 <figcaption>
                   <a href="#" data-toggle="modal" data-target="#govUkReactModal">
-                    <h3>GOV UK Design system component library</h3>
+                    <h3>GOV UK Design component library</h3>
                     <hr>
                     <p>React</p>
                   </a>
