Update projects to include React skeleton project

--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
                 <img src="images/portfolio/react-best-practices.jpg" alt="">
                 <figcaption>
                   <a href="#" data-toggle="modal" data-target="#reactAsyncModal">
-                    <h3>React 16 Async loading example</h3>
+                    <h3>React Skeleton</h3>
                     <hr>
-                    <p>React, Redux</p>
+                    <p>React</p>
                   </a>
                 </figcaption>
               </figure>
@@ -825,10 +825,10 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="reactAsyncModalLabel"><a href="https://github.com/taranchauhan/react-best-practices">React 16 Async loading using fetcher example</a></h4>
+          <h4 class="modal-title" id="reactAsyncModalLabel"><a href="https://github.com/taranchauhan/react-skeleton">React Skeleton</a></h4>
         </div>
         <div class="modal-body">
-          <p>React 16 Async loading using fetcher example</p>
+          <p>React Skeleton is a boilerplate repository for creating a new React web application.</p>
           <img src="images/portfolio/react-best-practices.jpg" class="img-responsive" alt="">
         </div>
       </div>
