--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="govUkReactModalLabel"><a href="https://ukhomeoffice.github.io/govuk-react">GOV UK React</a></h4>
+          <h4 class="modal-title" id="govUkReactModalLabel"><a href="https://govuk-react.github.io/govuk-react">GOV UK React</a></h4>
         </div>
         <div class="modal-body">
           <p>Developed a port of the GOV UK design system in React as a component library.</p>
