Changed web link

--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="bvbModalLabel"><a href="https://videocall.barclays.co.uk/barclays-video-banking/index.html?entrypoint=mortgagesales">Barclays Video Banking</a></h4>
+          <h4 class="modal-title" id="bvbModalLabel"><a href="https://www.barclays.co.uk/ways-to-bank/video-banking">Barclays Video Banking</a></h4>
         </div>
         <div class="modal-body">
           <p>Barclays Video banking was built using native JavaScript and supports all modern browsers so customers can bank from the comfort of their home.</p>
